--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
             <version>4.0.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.hubspot.jinjava</groupId>
+            <artifactId>jinjava</artifactId>
+            <version>2.5.4</version>
+        </dependency>
     </dependencies>
 
     <build>
